💡 ParserState (improve recusive references)